--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- 桌面设备 header -->
         <div class="d-none d-sm-block pc-header">
             <div class="header-logo clearfix">
-                <img class="float-right" src="http://xmhljx.net/r/cms/site/hljx/hj/images/logo.png" alt="厦门市湖里区教师进修学校">
+                <img class="float-right" src="./images/logo.png" alt="厦门市湖里区教师进修学校">
             </div>
             <div class="header-tags clearfix">
                 <ul class="float-right">
@@ -29,7 +29,7 @@
             </div>
         </div>
         <!-- 手机端 header -->
-        <h1 class="d-block d-sm-none">
+        <div class="d-block d-sm-none">
             <nav class="navbar navbar-dark mobile-header" style="background-color: #0498D4;">
                 <div class="head-title">
                     <img src="./icons/home.png" width="24">
@@ -85,91 +85,83 @@
                     </ul>
                 </div>
             </nav>
-        </h1>
+        </div>
     </header>
     <section class="container-xl">
         <!-- 桌面设备 nav -->
         <div class="d-none d-sm-block">
-            <nav class="nav nav-pills nav-fill main-nav" id="menu">
-                <a class="nav-item nav-link active" href="#">学校首页</a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+            <ul class="nav nav-pills nav-fill main-nav" id="menu">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/index">首页</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:;" role="button"
                         aria-haspopup="true" aria-expanded="false">学校概况</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
+                        <a class="dropdown-item" href="/channel">学校简介1</a>
+                        <a class="dropdown-item" href="/channel">学校特色</a>
+                        <a class="dropdown-item" href="/channel">领导班子</a>
+                        <a class="dropdown-item" href="/channel">学校荣誉</a>
+                        <a class="dropdown-item" href="/channel">机构设置</a>
                     </div>
-                </a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:;" role="button"
                         aria-haspopup="true" aria-expanded="false">师训干训</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
+                        <a class="dropdown-item" href="/channel">学校简介2</a>
+                        <a class="dropdown-item" href="/channel">学校特色</a>
+                        <a class="dropdown-item" href="/channel">领导班子</a>
+                        <a class="dropdown-item" href="/channel">学校荣誉</a>
+                        <a class="dropdown-item" href="/channel">机构设置</a>
                     </div>
-                </a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">小学教研</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
-                    </div>
-                </a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:;" role="button"
                         aria-haspopup="true" aria-expanded="false">中学教研</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
+                        <a class="dropdown-item" href="/channel">学校简介3</a>
+                        <a class="dropdown-item" href="/channel">学校特色</a>
+                        <a class="dropdown-item" href="/channel">领导班子</a>
+                        <a class="dropdown-item" href="/channel">学校荣誉</a>
+                        <a class="dropdown-item" href="/channel">机构设置</a>
                     </div>
-                </a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">幼教教研</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:;" role="button"
+                        aria-haspopup="true" aria-expanded="false">小学教研</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
+                        <a class="dropdown-item" href="/channel">学校简介4</a>
+                        <a class="dropdown-item" href="/channel">学校特色</a>
+                        <a class="dropdown-item" href="/channel">领导班子</a>
+                        <a class="dropdown-item" href="/channel">学校荣誉</a>
+                        <a class="dropdown-item" href="/channel">机构设置</a>
                     </div>
-                </a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">学校概况</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:;" role="button"
+                        aria-haspopup="true" aria-expanded="false">艺体教育</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
+                        <a class="dropdown-item" href="/channel">学校简介5</a>
+                        <a class="dropdown-item" href="/channel">学校特色</a>
+                        <a class="dropdown-item" href="/channel">领导班子</a>
+                        <a class="dropdown-item" href="/channel">学校荣誉</a>
+                        <a class="dropdown-item" href="/channel">机构设置</a>
                     </div>
-                </a>
-                <a class="nav-item dropdown" href="#">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">师训干训</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:;" role="button"
+                        aria-haspopup="true" aria-expanded="false">党建工会</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">学校简介</a>
-                        <a class="dropdown-item" href="#">学校特色</a>
-                        <a class="dropdown-item" href="#">领导班子</a>
-                        <a class="dropdown-item" href="#">学校荣誉</a>
-                        <a class="dropdown-item" href="#">机构设置</a>
+                        <a class="dropdown-item" href="/channel">学校简介6</a>
+                        <a class="dropdown-item" href="/channel">学校特色</a>
+                        <a class="dropdown-item" href="/channel">领导班子</a>
+                        <a class="dropdown-item" href="/channel">学校荣誉</a>
+                        <a class="dropdown-item" href="/channel">机构设置</a>
                     </div>
-                </a>
-            </nav>
+                </li>
+            </ul>
         </div>
         <div class="main-content">
             <div class="row">
@@ -184,8 +176,8 @@
                             <div class="carousel-item active">
                                 <img src="./images/1.jpg" class="d-block" alt="校园一角">
                                 <!-- <div class="carousel-caption d-none d-md-block">
-                                    <h5>校园一角</h5>
-                                </div> -->
+                    <h5>校园一角</h5>
+                </div> -->
                             </div>
                             <div class="carousel-item">
                                 <img src="./images/2.jpg" class="d-block" alt="校园一角">
